update footer link

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -2,7 +2,7 @@
 <footer>
     <nav class="footer-nav">
         <div class="nav-title">
-            <a href="https://tomcantellow.github.io" target="_blank" class="hover:underline nav-link">
+            <a href="https://tcantellow.github.io/tomcantellow/" target="_blank" class="hover:underline nav-link">
                 Website by Tom Cantellow
             </a>
             <span> | </span>
