--- a/assets/header.html
+++ b/assets/header.html
@@ -1,14 +1,17 @@
 <!-- assets/header.html -->
 <header>
-    <h1>Tom Cantellow</h1>
-    <button type="button" onclick="toggleMode()" class="toggle-button">
-        Toggle Dark Mode
-    </button>
-</header>
-<div class="sub-nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="cv.html">CV</a>
-    <a href="contact.html">Contact</a>
-</div>
+    <div class="header-content">
+        <div class="dark-mode-container">
+            <button type="button" onclick="toggleMode()" class="toggle-button">
+                Toggle Dark Mode
+            </button>
+        </div>
+        <div class="sub-nav">
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="https://www.linkedin.com/in/tomcantellow/" target="_blank">LinkedIn</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+    <p style="display: none;">
+        <strong>Keywords:</strong> UK Politics, Elections, Housing, Inequality, Energy Efficiency, Spatial Analysis, Populism, Personal Values, Neoliberalism, Social Research, Human Geography, Political Economy, Quantitative Analysis, Spatial Analysis, Data Analysis, Policy Analysis, Economic Inequality, Energy Efficiency, Electoral Politics, Local Government, Community Development, Social Justice, Urban Studies, Rural Studies, Environmental Policy, Climate Change, Sustainable Development, Public Policy, Geographic Information Systems (GIS), Econometrics, Statistical Methods, Social Statistics, Demographic Analysis, Population Studies, Public Health, Welfare Economics, Labour Market, Social Capital, Political Sociology, Civic Engagement, Voter Behavior, Electoral Systems, Neoliberalism, Globalization, Social Movements, Research Methodology, Field Research, Surveys and Polls, Mixed Methods, Case Studies, Community Resilience, Housing Policy, Transportation Policy, Urban Planni
