--- a/assets/header.html
+++ b/assets/header.html
@@ -9,8 +9,15 @@
         <div class="sub-nav">
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
+        <div class="dropdown">
+            <a href="#" class="dropbtn">Resources</a>
+            <div class="dropdown-content">
+                <a href="software.html">Software</a>
+                <a href="statistics.html">Statistics</a>
+        </div>
+        </div>
             <a href="https://www.linkedin.com/in/tomcantellow/" target="_blank">LinkedIn</a>
-            <a href="contact.html">Contact</a>
+            <a href="mailto:t.cantellow@bristol.ac.uk">Contact</a>
         </div>
     </div>
     <p style="display: none;">
