--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
-    <title>Tom Cantellow - Social Researcher & Analyst</title>
+    <title>Tom Cantellow</title>
     <meta name="Tom Cantellow" content="Tom Cantellow's professional portfolio">
     <meta name="theme-color" content="#ffffff">
 
@@ -47,20 +47,14 @@
         <!-- Introduction Section -->
         <section class="intro">
             <p>
-                I’m a human geographer and social researcher dedicated to advancing understanding of the complex issues
-                that shape the politics and economy of British society. My work spans a range of themes, from elections and housing to
-                inequality and energy efficiency, with a focus on spatial analysis and quantitative methodologies. 
-
-                Driven by a commitment to creating a more equal society for all, my projects aim to provide
-                valuable insights for a diverse audience of researchers, policymakers, and public stakeholders.
+                I’m a human geographer and social researcher dedicated to advancing understanding of the complex issues that shape the politics and economy of British society. My work spans a range of themes, from elections and housing to inequality and energy efficiency, with a focus on spatial analysis and quantitative methodologies. My projects aim to provide valuable insights for a diverse audience of researchers, policymakers, public stakeholders, and students.
             </p>
             <p>
-                Throughout my career, I've developed expertise in advanced quantitative techniques, GIS, econometrics, R,
-                Excel, and policy analysis, complemented by strong skills in teaching and communication. You can see some of my work under the <strong>Projects</strong> section of this site. 
+                In 2024, I submitted my PhD in Human Geography at the <a href="https://research-information.bris.ac.uk/en/persons/tom-cantellowUniversity of Bristol" target="_blank">University of Bristol</a>, and I've also worked with local and national government and think tanks. Throughout my career, I've developed expertise in advanced quantitative techniques, GIS, econometrics, policy analysis, and teaching and communication. You can see some of my work under the <a href="projects.html" target="_blank"><strong>Projects</strong></a> section of this site. 
             </p>
             <p>
                 I'm originally from the <a href="https://en.wikipedia.org/wiki/Isle_of_Sheppey" target="_blank">Isle of Sheppey</a> in North Kent, and I am proudly of <a href="https://en.wikipedia.org/wiki/Boyash" target="_blank">Rudari</a>
-                heritage.
+                heritage. I am driven by a commitment to creating a more equal society for all, and am passionate about democratising research by maximising accessibility. I am also highly motivated to widen participation for underrepresented groups at Universities.
             </p>
         </section>
 
