--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
-    <title>Tom Cantellow - Social Researcher & Analyst</title>
+    <title>Tom Cantellow</title>
     <meta name="Projects" content="My Projects">
     <meta name="theme-color" content="#ffffff">
 
