--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
             </a>
             <div class="project-content">
                 <h2>Good Credit Index</h2>
-                <p>Produced all maps included in the 2023 Good Credit Index Report with Demos.</p>
+                <p>I produced all maps included in Demos' 2023 Good Credit Index Report.</p>
                 <a href="https://demos.co.uk/research/credit-in-the-cost-of-living-crisis-the-good-credit-index-2023/" target="_blank">Good Credit Index 2023</a>
             </div>
         </div>
