update heading text

--- a/statistics.html
+++ b/statistics.html
@@ -34,7 +34,7 @@
     </script>
 
 <body>
-    <h1>Statistics and Data Analysis Resources</h1>
+    <h1>Resources for learning statistics and data analysis</h1>
 
     <h2>Textbooks</h2>
     <ul>
