--- a/assets/header.html
+++ b/assets/header.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="sub-nav">
-                <a href="index.html">Home</a>
+                <a href="home.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <div class="dropdown">
                     <a href="#" class="dropbtn">Resources</a>
