--- a/assets/header.html
+++ b/assets/header.html
@@ -1,14 +1,8 @@
 <!-- assets/header.html -->
 <div id="header-container">
     <header>
-        <div class="header-content">
-            <div class="dark-mode-container">
-                <button type="button" onclick="toggleMode()" class="toggle-button">
-                    Toggle Dark Mode
-                </button>
-            </div>
             <div class="sub-nav">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
                 <div class="dropdown">
                     <a href="#" class="dropbtn">Resources</a>
