--- a/software.html
+++ b/software.html
@@ -39,13 +39,13 @@
     <ul class="software-list">
         <h2>Research, Mapping, and Data Analysis</h2>
         <li>
-            <a href="https://posit.co/" target="_blank"><strong>RStudio</strong></a> – How I use R, ideal for statistical computing and graphics.
+            <a href="https://posit.co/" target="_blank"><strong>RStudio</strong></a> – Working environment for R, ideal for statistical computing and graphics.
         </li>
         <li>
             <a href="https://qgis.org/" target="_blank"><strong>QGIS</strong></a> – An open-source Geographic Information System for spatial analysis and mapping. Good for finishing maps before publication.
         </li>
         <li>
-            <a href="https://www.zotero.org/" target="_blank"><strong>Zotero</strong></a> – My favourite reference manager. Use with <a href="https://zotfile.com/Zotfile" target="_blank"><strong>Zotfile</strong></a> for syncing and to get around storage limitations.
+            <a href="https://www.zotero.org/" target="_blank"><strong>Zotero</strong></a> – Reference manager. Use with <a href="https://zotfile.com/Zotfile" target="_blank"><strong>Zotfile</strong></a> for syncing and to get around storage limitations.
         </li>
         <li>
             <a href="https://miro.com/" target="_blank"><strong>Miro</strong></a> – An online tool for creating beautiful mindmaps and flowcharts.
@@ -56,39 +56,39 @@
 
         <h2>Media Tools</h2>
         <li>
-            <a href="https://www.getpaint.net/" target="_blank"><strong>Paint.NET</strong></a> – My go to for image maniuplation.
+            <a href="https://www.getpaint.net/" target="_blank"><strong>Paint.NET</strong></a> – For image manipulation.
         </li>
         <li>
-            <a href="https://www.audacityteam.org/" target="_blank"><strong>Audacity</strong></a> – My go to for audio manipulation.
+            <a href="https://www.audacityteam.org/" target="_blank"><strong>Audacity</strong></a> – For audio manipulation.
         </li>
         <li>
-            <a href="https://getmusicbee.com/" target="_blank"><strong>MusicBee</strong></a> – How I play my local music files.
+            <a href="https://getmusicbee.com/" target="_blank"><strong>MusicBee</strong></a> – For playing local music files.
         </li>
         <li>
-            <a href="https://www.videolan.org/vlc/" target="_blank"><strong>VLC Media Player</strong></a> – How I play my local video files.
+            <a href="https://www.videolan.org/vlc/" target="_blank"><strong>VLC Media Player</strong></a> – For playing local video files.
         </li>
 
         <h2>File Management</h2>
         <li>
-            <a href="https://freefilesync.org/" target="_blank"><strong>FreeFileSync</strong></a> – Synchronises files and folders across devices. Awesome for keeping work synchronised across multiple filesystem: I use this to keep my work synchronised across my home PC, portable SSD, and my onedrive-linked work laptop.
+            <a href="https://freefilesync.org/" target="_blank"><strong>FreeFileSync</strong></a> – Synchronises files and folders across devices. Awesome for keeping work synchronised across multiple filesystem: I used this to keep my PhD synchronised across my home PC, portable SSD, and onedrive-linked work laptop.
         </li>
         <li>
-            <a href="https://www.veracrypt.fr/" target="_blank"><strong>VeraCrypt</strong></a> – Excellent tool for encryption.
+            <a href="https://www.veracrypt.fr/" target="_blank"><strong>VeraCrypt</strong></a> – Encryption tool.
         </li>
         <li>
-            <a href="https://www.7-zip.org/" target="_blank"><strong>7-Zip</strong></a> – Compress and uncompress files.
+            <a href="https://www.7-zip.org/" target="_blank"><strong>7-Zip</strong></a> – File compression tool.
         </li>
         <li>
-            <a href="https://calibre-ebook.com/" target="_blank"><strong>Calibre</strong></a> – An e-book manager that organises, converts, and syncs your digital book collection.
+            <a href="https://calibre-ebook.com/" target="_blank"><strong>Calibre</strong></a> – E-book manager.
         </li>
         <li>
-            <a href="https://windirstat.net/" target="_blank"><strong>WinDirStat</strong></a> – Digital storage analyser to help manage storage.
+            <a href="https://windirstat.net/" target="_blank"><strong>WinDirStat</strong></a> – Digital storage analyser.
         </li>
         <li>
             <a href="https://www.amd.com/en/technologies/ramdisk" target="_blank"><strong>AMD RAMDisk</strong></a> – Allows system RAM to function as super-fast storage for temporary files. 4GB limit on free version.
         </li>
         <li>
-            <a href="https://openhardwaremonitor.org/" target="_blank"><strong>Open Hardware Monitor</strong></a> – Monitors system sensors and shows real-time CPU and GPU data.
+            <a href="https://openhardwaremonitor.org/" target="_blank"><strong>Open Hardware Monitor</strong></a> – System monitoring.
         </li>
 
         <h2>Internet & Security</h2>
@@ -99,13 +99,13 @@
             <a href="https://bitwarden.com/" target="_blank"><strong>Bitwarden</strong></a> – An open-source password manager for securing credentials.
         </li>
         <li>
-            <a href="https://github.com/gorhill/uBlock" target="_blank"><strong>uBlock Origin</strong></a> – A powerful ad-blocker to speed up browsing and improve security.
+            <a href="https://github.com/gorhill/uBlock" target="_blank"><strong>uBlock Origin</strong></a> – A powerful ad-blocker.
         </li>
         <li>
-            <a href="https://sponsor.ajay.app/" target="_blank"><strong>SponsorBlock</strong></a> – A Firefox extension that skips sponsored segments in videos.
+            <a href="https://sponsor.ajay.app/" target="_blank"><strong>SponsorBlock</strong></a> – A browser extension that skips sponsored segments in videos.
         </li>
         <li>
-            <a href="https://swiftselectionsearch.com/" target="_blank"><strong>SwiftSelectionSearch</strong></a> – A Firefox extension allowing quick searches by highlighting text.
+            <a href="https://swiftselectionsearch.com/" target="_blank"><strong>SwiftSelectionSearch</strong></a> – A browser extension allowing quick searches by highlighting text.
         </li>
 
         <h2>Tools</h2>
@@ -113,7 +113,7 @@
             <a href="https://outlookgooglecalendarsync.com/" target="_blank"><strong>Outlook Google Calendar Sync</strong></a> – Syncs Google and Outlook calendars.
         </li>
         <li>
-            <a href="https://www.revouninstaller.com/" target="_blank"><strong>Revo Uninstaller</strong></a> – Efficiently removes software and cleans up leftover files.
+            <a href="https://www.revouninstaller.com/" target="_blank"><strong>Revo Uninstaller</strong></a> – Uninstalls software and cleans up leftover files.
         </li>
         <li>
             <a href="https://www.unifiedremote.com/" target="_blank"><strong>Unified Remote</strong></a> – Turns a smartphone into a PC remote control.
