--- a/software.html
+++ b/software.html
@@ -6,13 +6,11 @@
     <title>Tom Cantellow</title>
     <meta name="Software List" content="Recommended software">
     <meta name="theme-color" content="#ffffff">
-
     <link rel="stylesheet" href="assets/styles.css"> <!-- Link to external stylesheet -->
     <script src="assets/script.js" defer></script> <!-- Link to external script -->
 </head>
 <body>
     <div id="header-placeholder"></div>
-
     <script>
         // Function to load the header
         function loadHeader() {
@@ -28,14 +26,11 @@
                 })
                 .catch(error => console.error('Error loading header:', error));
         }
-
         // Load the header when the page loads
         window.onload = loadHeader;
     </script>
-
 <body>
     <h1>Recommended Software</h1>
-    
     <ul class="software-list">
         <h2>Research, Mapping, and Data Analysis</h2>
         <li>
@@ -53,8 +48,7 @@
         <li>
             <a href="https://mycolor.space/" target="_blank"><strong>ColorSpace</strong></a> – An online tool for creating colour palettes.
         </li>
-
-        <h2>Media Tools</h2>
+        <h2>Media</h2>
         <li>
             <a href="https://www.getpaint.net/" target="_blank"><strong>Paint.NET</strong></a> – For image manipulation.
         </li>
@@ -67,7 +61,9 @@
         <li>
             <a href="https://www.videolan.org/vlc/" target="_blank"><strong>VLC Media Player</strong></a> – For playing local video files.
         </li>
-
+        <li>
+            <a href="https://calibre-ebook.com/" target="_blank"><strong>Calibre</strong></a> – E-book manager.
+        </li>
         <h2>File Management</h2>
         <li>
             <a href="https://freefilesync.org/" target="_blank"><strong>FreeFileSync</strong></a> – Synchronises files and folders across devices. Awesome for keeping work synchronised across multiple filesystem: I used this to keep my PhD synchronised across my home PC, portable SSD, and onedrive-linked work laptop.
@@ -79,9 +75,6 @@
             <a href="https://www.7-zip.org/" target="_blank"><strong>7-Zip</strong></a> – File compression tool.
         </li>
         <li>
-            <a href="https://calibre-ebook.com/" target="_blank"><strong>Calibre</strong></a> – E-book manager.
-        </li>
-        <li>
             <a href="https://windirstat.net/" target="_blank"><strong>WinDirStat</strong></a> – Digital storage analyser.
         </li>
         <li>
@@ -91,7 +84,7 @@
             <a href="https://openhardwaremonitor.org/" target="_blank"><strong>Open Hardware Monitor</strong></a> – System monitoring.
         </li>
 
-        <h2>Internet & Security</h2>
+        <h2>Internet</h2>
         <li>
             <a href="https://www.mozilla.org/en-US/firefox/" target="_blank"><strong>Mozilla Firefox</strong></a> – A secure, privacy-focused web browser with customisation options.
         </li>
@@ -107,7 +100,6 @@
         <li>
             <a href="https://swiftselectionsearch.com/" target="_blank"><strong>SwiftSelectionSearch</strong></a> – A browser extension allowing quick searches by highlighting text.
         </li>
-
         <h2>Tools</h2>
         <li>
             <a href="https://outlookgooglecalendarsync.com/" target="_blank"><strong>Outlook Google Calendar Sync</strong></a> – Syncs Google and Outlook calendars.
@@ -127,8 +119,6 @@
         <li>
             <a href="https://github.com/auctors/free-lunch" target="_blank"><strong>Free Lunch</strong></a> – Awesome list of free software.
         </li> 
-        
-
         <h2>Miscellaneous</h2>
         <li>
                 <a href="https://cycle.travel/" target="_blank"><strong>Cycle.Travel</strong></a> – Bicycle route planner. Finds quiet roads.
@@ -139,9 +129,7 @@
         </li>
     </ul>
 </body>
-
         <div id="footer-placeholder"></div>
     </main>
-
 </body>
 </html>
