--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
             </a>
             <div class="project-content">
                 <h2>Cryptoassets Briefing</h2>
-                <p>A briefing on Cryptoassets produced during a 3-month internship with the Home Office's Central Analysis and Insights Team.</p>
+                <p>A briefing on Cryptoassets produced during the application process for a 3-month internship with the Home Office's Central Analysis and Insights Team.</p>
                 <a href="assets/cryptoassets.pdf" target="_blank">Cryptoassets Briefing</a>
             </div>
         </div>
