--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,7 @@
             <div class="project-content">
                 <h2>Cryptoassets Briefing</h2>
                 <p>A briefing on Cryptoassets produced during the application process for a 3-month internship with the Home Office's Central Analysis and Insights Team.</p>
-                <a href="assets/cryptoassets.pdf" target="_blank">Cryptoassets Briefing</a>
+                <a href="assets/Cryptoassets.pdf" target="_blank">Cryptoassets Briefing</a>
             </div>
         </div>
     </main>
