update project text

--- a/projects.html
+++ b/projects.html
@@ -135,7 +135,7 @@
         </div>
 
         <div class="gallery-intro">
-            <h2>MSc Map Portfolio</h2>
+            <h2>MSc Portfolio</h2>
             <p>A selection of maps I produced during my Applied GIS MSc at the University of Sheffield.</p>
         </div>
         
