--- a/projects.html
+++ b/projects.html
@@ -6,79 +6,48 @@
     <title>Tom Cantellow</title>
     <meta name="Projects" content="My Projects">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="assets/styles.css">
-    <script src="assets/script.js" defer></script>
+
+    <link rel="stylesheet" href="assets/styles.css"> <!-- Link to external stylesheet -->
+    <script src="assets/script.js" defer></script> <!-- Link to external script -->
     <style>
-        /* Add custom styles for the gallery */
-        .gallery-intro {
-            text-align: center;
-            margin-bottom: 30px;
+        .project {
+            display: flex;
+            align-items: center;
+            padding: 15px 0;
+            margin-bottom: 10px;
         }
 
-        .gallery-thumbnails {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Responsive grid */
-            gap: 20px;
-            justify-items: center;
-        }
-
-        .thumbnail {
-            text-align: center;
-        }
-
-        .thumbnail img {
-            width: 100%;
-            height: auto;
+        .project img {
+            width: 300px;
+            height: 300px;
             object-fit: cover;
-            cursor: pointer;
-            transition: transform 0.3s ease-in-out;
+            margin-right: 20px;
         }
 
-        .thumbnail img:hover {
-            transform: scale(1.05); /* Slight zoom effect */
+        .project-content {
+            max-width: 600px;
         }
 
-        .caption {
-            margin-top: 10px;
-            font-size: 0.9em;
+        .project-content h2 {
+            margin: 0;
+            font-size: 1.5em;
+        }
+
+        .project-content p {
+            margin: 10px 0;
             color: #555;
         }
 
-        /* Optional: Add styling for full image modal */
-        .modal {
-            display: none; /* Hidden by default */
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.9);
-        }
-
-        .modal-content {
-            display: block;
-            margin: 0 auto;
-            max-width: 90%;
-            max-height: 90%;
-        }
-
-        .close {
-            position: absolute;
-            top: 15px;
-            right: 35px;
-            color: #f1f1f1;
-            font-size: 40px;
-            font-weight: bold;
+        .project-content a {
+            display: inline-block;
+            margin-top: 5px;
+            text-decoration: none;
+            color: #007bff;
             transition: color 0.3s;
         }
 
-        .close:hover,
-        .close:focus {
-            color: #bbb;
-            text-decoration: none;
-            cursor: pointer;
+        .project-content a:hover {
+            color: #0056b3;
         }
     </style>
 </head>
@@ -163,45 +132,7 @@
                 <h2>Master's Thesis</h2>
                 <p><i>A Spatial Examination of Populism and Absenteeism in the UK in the Context of the 2016 EU Referendum</i>, submitted in 2018 for my Applied GIS MSc dissertation at the University of Sheffield. Won the Ian Masser Prize for best master's dissertation.</p>
             </div>
-        </div>
-
-        <div class="gallery-intro">
-            <h2>MSc Portfolio</h2>
-            <p>A selection of maps I produced during my Applied GIS MSc at the University of Sheffield.</p>
-        </div>
-
-        <div class="gallery-thumbnails">
-            <div class="thumbnail">
-                <a href="assets/images/gallery/LondonAlt.png" target="_blank">
-                    <img src="assets/images/gallery/LondonAlt.png" alt="Map of London">
-                </a>
-                <div class="caption">A dasymetric map of London's buildings, coloured by the largest ethnic minority of the neighbourhood.</div>
-            </div>
-            <div class="thumbnail">
-                <a href="assets/images/gallery/NYCTrees.png" target="_blank">
-                    <img src="assets/images/gallery/NYCTrees.png" alt="Hexmap of New York City's Trees">
-                </a>
-                <div class="caption">A hexagon-binned density map of all of New York City's street trees.</div>
-            </div>
-            <div class="thumbnail">
-                <a href="assets/images/gallery/NYCBuildingAge.png" target="_blank">
-                    <img src="assets/images/gallery/NYCBuildingAge.png" alt="Map of Building Age in New York City">
-                </a>
-                <div class="caption">A dasymetric map of New York City's built environment, visualising the age of buildings.</div>
-            </div>
-            <div class="thumbnail">
-                <a href="assets/images/gallery/EuropeGDPCartogram.png" target="_blank">
-                    <img src="assets/images/gallery/EuropeGDPCartogram.png" alt="Cartogram of Europe's GDP">
-                </a>
-                <div class="caption">A cartogram of Europe, distorted by GDP.</div>
-            </div>
-        </div>
-        
-        <!-- Modal for displaying full-size images -->
-        <div id="modal" class="modal">
-            <span class="close">&times;</span>
-            <img class="modal-content" id="modal-image" alt="Full-size image">
-        </div>
+        </div>        
         
     </main>
 </body>
