--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 I use spatial analysis and quantitative methodologies to analyse a range of topics, including inequality, elections, housing, politics, energy efficiency, personal finance, and local economies. 
             </p>
             <p>
-                In 2024, I submitted my PhD in Human Geography at the <a href="https://research-information.bris.ac.uk/en/persons/tom-cantellowUniversity of Bristol" target="_blank">University of Bristol</a>, where I've also taught across a wide range of units. I have also worked with think tanks and the public sector at both national and local levels. 
+                In 2024, I submitted my PhD in Human Geography at the University of Bristol, where I've also taught across a wide range of units. I have also worked with think tanks and the public sector at both national and local levels. 
             </p>
             <p>
                 I am available to consult and collaborate on map production, data analysis, survey design, and many other topics. I'd love to <a href="mailto:t.cantellow@bristol.ac.uk">chat</a> about what you have in mind. 
