--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <section class="profile">
             <img src="assets/images/cantellow.png" alt="Photo of Tom Cantellow">
             <div class="profile-info">
-                <h2>Tom Cantellow</h2>
-                <p class="subheading">A Quantitative Human Geographer<br>Focusing on Politics, Economics, and Inequalities</p>
+                <h2>&nbsp&nbsp&nbspTom Cantellow</h2>
+                <p class="subheading">Quantitative Human Geographer
             </div>
         </section>
         
@@ -48,16 +48,10 @@
         <!-- Introduction Section -->
         <section class="intro">
             <p>
-                I am a human geographer interested in understanding the politics and economy of Britain. I provide insight for researchers, policymakers, public stakeholders, and students.
+                I am researcher interested in the economy, society, and politics of Britain. I have a PhD in Human Geography from the University of Bristol, and I studied Applied GIS at the University of Sheffield and International Relations at the University of Lincoln. I use quantitative methodologies to analyse a range of topics, including inequality, housing, energy efficiency, voting, personal finance, and local economies.
             </p>
             <p>
-                I use spatial analysis and quantitative methodologies to analyse a range of topics, including inequality, elections, housing, politics, energy efficiency, personal finance, and local economies. 
-            </p>
-            <p>
-                In 2024, I submitted my PhD in Human Geography at the University of Bristol, where I've also taught across a wide range of units. I have also worked with think tanks and the public sector at both national and local levels. 
-            </p>
-            <p>
-                I am available to consult and collaborate on map production, data analysis, survey design, and many other topics. I'd love to <a href="mailto:t.cantellow@bristol.ac.uk">chat</a> about what you have in mind. 
+                In addition to producing geographic research, I am an educator and consultant for think tanks and the public sector at both national and local levels.  I am available to consult and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:t.cantellow@bristol.ac.uk">Get in touch.</a>
             </p>
         </section>
 
