--- a/projects.html
+++ b/projects.html
@@ -161,7 +161,7 @@
                         <a href="assets/images/gallery/Bristol_Age.png" target="_blank">
                             <img src="assets/images/gallerythumbs/Bristol_Age.png" alt="Building age in Bristol">
                         </a>
-                        <p>A point map of Bristol's Buildings, visualising the age of buildings. Produced as part of the Retrofitting Rentals project.</p>
+                        <p>A point map of Bristol's Buildings, visualising their construction date. Produced as part of the Retrofitting Rentals project.</p>
                     </div>
             
                     <div class="portfolio-item">
