--- a/software.html
+++ b/software.html
@@ -31,58 +31,29 @@
     </script>
 <body>
     <h1>Recommended Software</h1>
-    <ul class="software-list">
-        <h2>Research, Mapping, and Data Analysis</h2>
-        <li>
-            <a href="https://posit.co/" target="_blank"><strong>RStudio</strong></a> – Working environment for R, ideal for statistical computing and graphics.
+    <ul style="list-style-type:none; padding:0;">
+        <li style="margin-bottom:0;">
+            <p style="margin-bottom:5px;"><strong>Research, Mapping, and Analysis:</strong></p>
+                <li><a href="https://posit.co/" target="_blank"><strong>RStudio</strong></a> – Working environment for R, ideal for statistical computing and graphics.</li>
+                <li><a href="https://qgis.org/" target="_blank"><strong>QGIS</strong></a> – An open-source Geographic Information System for spatial analysis and mapping. Good for finishing maps before publication.</li>
+                <li><a href="https://www.zotero.org/" target="_blank"><strong>Zotero</strong></a> – Reference manager. Use with <a href="https://zotfile.com/Zotfile" target="_blank"><strong>Zotfile</strong></a> for syncing and to get around storage limitations.</li>
+                <li><a href="https://miro.com/" target="_blank"><strong>Miro</strong></a> – An online tool for creating beautiful mindmaps and flowcharts.</li>
+                <li><a href="https://mycolor.space/" target="_blank"><strong>ColorSpace</strong></a> – An online tool for creating colour palettes.</li>
         </li>
-        <li>
-            <a href="https://qgis.org/" target="_blank"><strong>QGIS</strong></a> – An open-source Geographic Information System for spatial analysis and mapping. Good for finishing maps before publication.
-        </li>
-        <li>
-            <a href="https://www.zotero.org/" target="_blank"><strong>Zotero</strong></a> – Reference manager. Use with <a href="https://zotfile.com/Zotfile" target="_blank"><strong>Zotfile</strong></a> for syncing and to get around storage limitations.
-        </li>
-        <li>
-            <a href="https://miro.com/" target="_blank"><strong>Miro</strong></a> – An online tool for creating beautiful mindmaps and flowcharts.
-        </li>
-        <li>
-            <a href="https://mycolor.space/" target="_blank"><strong>ColorSpace</strong></a> – An online tool for creating colour palettes.
-        </li>
-        <h2>Tools</h2>
-        <li>
-            <a href="https://freefilesync.org/" target="_blank"><strong>FreeFileSync</strong></a> – Synchronises files and folders across devices. Awesome for keeping work synchronised across multiple filesystem: I used this to keep my PhD synchronised across my home PC, portable SSD, and onedrive-linked work laptop.
-        </li>
-        <li>
-            <a href="https://www.amd.com/en/technologies/ramdisk" target="_blank"><strong>AMD RAMDisk</strong></a> – Allows system RAM to function as super-fast storage for temporary files. 4GB limit on free version.
-        </li>
-            <a href="https://www.getpaint.net/" target="_blank"><strong>Paint.NET</strong></a> – For image manipulation.
-        </li>
-        <li>
-            <a href="https://outlookgooglecalendarsync.com/" target="_blank"><strong>Outlook Google Calendar Sync</strong></a> – Syncs Google and Outlook calendars.
-        </li>
-        <li>
-            <a href="https://www.unifiedremote.com/" target="_blank"><strong>Unified Remote</strong></a> – Turns a smartphone into a PC remote control.
-        </li>
-        <li>
-            <a href="https://12ft.io/" target="_blank"><strong>12ft.io</strong></a> – Paywall bypasser.
-        </li> 
-        <li>
-            <a href="https://github.com/auctors/free-lunch" target="_blank"><strong>Free Lunch</strong></a> – Awesome list of free software.
-        </li> 
-        <li>
-            <a href="https://github.com/gorhill/uBlock" target="_blank"><strong>uBlock Origin</strong></a> – A powerful ad-blocker.
-        </li>
-        <li>
-            <a href="https://sponsor.ajay.app/" target="_blank"><strong>SponsorBlock</strong></a> – A browser extension that skips sponsored segments in videos.
-        </li>
-        <li>
-            <a href="https://swiftselectionsearch.com/" target="_blank"><strong>SwiftSelectionSearch</strong></a> – A browser extension allowing quick searches by highlighting text.
-        </li>
-            <li>
-                <a href="https://cycle.travel/" target="_blank"><strong>Cycle.Travel</strong></a> – Bicycle route planner. Finds quiet roads.
-        </li>
-        <li>
-                <a href="https://ninety180.com/" target="_blank"><strong>Ninety 180</strong></a> – Good visualisation tool for post-Brexit Brits. Calculate how many days you can remain in the EU.
+        <li style="margin-bottom:0;">
+            <p style="margin-bottom:5px;"><strong>General Tools:</strong></p>
+                <li><a href="https://freefilesync.org/" target="_blank"><strong>FreeFileSync</strong></a> – Synchronises files and folders across devices. Awesome for keeping work synchronised across multiple filesystems: I used this to keep my PhD synchronised across my home PC, portable SSD, and onedrive-linked work laptop.</li>
+                <li><a href="https://www.amd.com/en/technologies/ramdisk" target="_blank"><strong>AMD RAMDisk</strong></a> – Allows system RAM to function as super-fast storage for temporary files. 4GB limit on free version.</li>
+                <li><a href="https://www.getpaint.net/" target="_blank"><strong>Paint.NET</strong></a> – For image manipulation.</li>
+                <li><a href="https://outlookgooglecalendarsync.com/" target="_blank"><strong>Outlook Google Calendar Sync</strong></a> – Syncs Google and Outlook calendars.</li>
+                <li><a href="https://www.unifiedremote.com/" target="_blank"><strong>Unified Remote</strong></a> – Turns a smartphone into a PC remote control.</li>
+                <li><a href="https://12ft.io/" target="_blank"><strong>12ft.io</strong></a> – Paywall bypasser.</li>
+                <li><a href="https://github.com/auctors/free-lunch" target="_blank"><strong>Free Lunch</strong></a> – Awesome list of free software.</li>
+                <li><a href="https://github.com/gorhill/uBlock" target="_blank"><strong>uBlock Origin</strong></a> – A powerful ad-blocker.</li>
+                <li><a href="https://sponsor.ajay.app/" target="_blank"><strong>SponsorBlock</strong></a> – A browser extension that skips sponsored segments in videos.</li>
+                <li><a href="https://swiftselectionsearch.com/" target="_blank"><strong>SwiftSelectionSearch</strong></a> – A browser extension allowing quick searches by highlighting text.</li>
+                <li><a href="https://cycle.travel/" target="_blank"><strong>Cycle.Travel</strong></a> – Bicycle route planner. Finds quiet roads.</li>
+                <li><a href="https://ninety180.com/" target="_blank"><strong>Ninety 180</strong></a> – Good visualisation tool for post-Brexit Brits. Calculate how many days you can remain in the EU.</li>
         </li>
     </ul>
 </body>
