--- a/assets/header.html
+++ b/assets/header.html
@@ -11,6 +11,7 @@
                         <a href="statistics.html">Statistics</a>
                     </div>
                 </div>
+                <a href="assets/CV.pdf">CV</a>
                 <a href="https://www.linkedin.com/in/tomcantellow/" target="_blank">LinkedIn</a>
                 <a href="mailto:t.cantellow@bristol.ac.uk">Contact</a>
             </div>
