--- a/assets/header.html
+++ b/assets/header.html
@@ -7,8 +7,8 @@
                 <div class="dropdown">
                     <a href="#" class="dropbtn">Resources</a>
                     <div class="dropdown-content">
-                        <a href="software.html">Software</a>
-                        <a href="statistics.html">Statistics</a>
+                        <a href="statistics.html">Learn Statistics, Analysis, and Data Science</a>
+                        <a href="software.html">Recommended Software</a>
                     </div>
                 </div>
                 <a href="assets/CV.pdf">CV</a>
