--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
             <div class="project-content">
                 <h2>Net Zero Vulnerability Index</h2>
                 <p>I developed an index to compare the vulnerability of UK places to green-led economic restructuring.</p>
-                <a href="https://www.bristol.ac.uk/policybristol/" target="_blank">Report</a> (Due November 2024) |
+                <a href="https://www.bristol.ac.uk/policybristol/policy-briefings/net-zero-decarbonisation-economy/" target="_blank">Report</a> |
                 <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">Website</a>
             </div>
         </div>
