update menu items

--- a/assets/header.html
+++ b/assets/header.html
@@ -7,7 +7,7 @@
                 <div class="dropdown">
                     <a href="#" class="dropbtn">Resources</a>
                     <div class="dropdown-content">
-                        <a href="statistics.html">Learn Statistics, Analysis, and Data Science</a>
+                        <a href="statistics.html">Learn Data Science</a>
                         <a href="software.html">Recommended Software</a>
                     </div>
                 </div>
