--- a/statistics.html
+++ b/statistics.html
@@ -34,7 +34,7 @@
     </script>
 
 <body>
-    <h1>Resources for learning statistics and data analysis</h1>
+    <h1>Resources for learning statistics and data science</h1>
 
     <ul style="list-style-type:none; padding:0;">
         <li style="margin-bottom:0;">
