--- a/statistics.html
+++ b/statistics.html
@@ -69,6 +69,7 @@
                 <li><a href="https://spatialcausal.org/" target="_blank">Spatial Causal Inference</a> - Learn spatial analysis and causal inference techniques.</li>
                 <li><a href="https://etranos.info/urban_analytics_city_science/" target="_blank">Urban Analytics and City Science</a> - A guide to analyzing urban data and city science.</li>
                 <li><a href="https://geographicdata.science/book/intro.html" target="_blank">Geographic Data Science</a> - Learn geographic data science in Python.</li>
+                <li><a href="https://darribas.org/gds_course/content/home.html" target="_blank">Geographic Data Science</a> - An additional course for learning geographic data science.</li>
                 <li><a href="https://geocompr.robinlovelace.net/index.html" target="_blank">Geocomputation with R</a> - Advanced geospatial data analysis in R.</li>
                 <li><a href="https://spatial-microsim-book.robinlovelace.net/" target="_blank">Spatial Microsimulation</a> - Covers spatial data microsimulation techniques in R.</li>
                 <li><a href="https://www.esri.com/arcgis-blog/author/j_nelson/" target="_blank">Esri GIS Blog</a> - Articles on GIS and spatial analysis.</li>
