--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
     <main>
         <div class="project">
             <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">
-                <img src="assets/images/netzeroindex.png" alt="Net Zero Vulnerability Index">
+                <img src="assets/images/netzeroindex.png" alt="Net Zero Resilience Index">
             </a>
             <div class="project-content">
                 <h2>Net Zero Vulnerability Index</h2>
