--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
                 <img src="assets/images/netzeroindex.png" alt="Net Zero Resilience Index">
             </a>
             <div class="project-content">
-                <h2>Net Zero Vulnerability Index</h2>
+                <h2>Net Zero Resilience Index</h2>
                 <p>I developed an index to compare the vulnerability of UK places to green-led economic restructuring.</p>
                 <a href="https://www.bristol.ac.uk/policybristol/policy-briefings/net-zero-decarbonisation-economy/" target="_blank">Report</a> |
                 <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">Website</a>
