--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <!-- Introduction Section -->
         <section class="intro">
             <p>
-                I am a researcher interested in the economy, society, and politics of Britain. I have a PhD in Human Geography from the University of Bristol, and I studied Applied GIS at the University of Sheffield and International Relations at the University of Lincoln. I use quantitative methodologies to analyse a range of topics, including inequality, housing, energy efficiency, voting, personal finance, and local economies.
+                I am a researcher interested in the economy, society, and politics of Britain. I have a PhD in Human Geography from the University of Bristol, an MSc in Applied GIS from the University of Sheffield and a BA in International Relations from the University of Lincoln. I use quantitative methodologies to analyse inequality, housing, energy efficiency, voting, personal finance, and local economies.
             </p>
             <p>
-                In addition to producing geographic research, I am an educator and consultant for think tanks and the public sector at both national and local levels.  I am available to consult and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:t.cantellow@bristol.ac.uk">Get in touch.</a>
+                In addition to producing geographic research, I am available to educate, consult, and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:t.cantellow@bristol.ac.uk">Get in touch.</a>
             </p>
         </section>
 
