--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
             </a>
             <div class="project-content">
                 <h2>Retrofitting Rentals</h2>
-                <p>An index to compare the vulnerability of UK places to green-led economic restructuring.</p>
+                <p>A project assessing the state of energy efficiency in Bristol's private rental sector.</p>
                 <a href="https://www.bristol.ac.uk/policybristol/policy-engagement-projects/retrofitting-rentals-bristol/" target="_blank">Report</a> |
                 <a href="https://uobristol.maps.arcgis.com/apps/instant/interactivelegend/index.html?appid=bdc9bdf0ac9a405fb48e926e461679ed" target="_blank">Webmap</a>
             </div>
