--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Introduction Section -->
         <section class="intro">
             <p>
-                I am a researcher interested in the economy, society, and politics of Britain. I have a PhD in Human Geography from the University of Bristol, an MSc in Applied GIS from the University of Sheffield and a BA in International Relations from the University of Lincoln. I use quantitative methodologies to analyse inequality, housing, energy efficiency, voting, personal finance, and local economies.
+                I am a researcher interested in the economy, society, and politics of Britain. I use quantitative methodologies to analyse inequality, housing, energy efficiency, voting, personal finance, and local economies. I have a PhD in Human Geography from the University of Bristol, an MSc in Applied Geographic Information Systems from the University of Sheffield and a BA in International Relations from the University of Lincoln.
             </p>
             <p>
                 In addition to producing geographic research, I am available to educate, consult, and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:t.cantellow@bristol.ac.uk">Get in touch.</a>
