--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,7 @@
                 <img src="assets/images/NonVoteChange.png" alt="UK NonVote Change">
             </a>
             <div class="project-content">
-                <h2>Master's Thesis</h2>
+                <h2>Master's Dissertation</h2>
                 <p>My dissertation, <i>A Spatial Examination of Populism and Absenteeism in the UK in the Context of the 2016 EU Referendum</i>, was submitted in 2018 for my MSc in Applied GIS at the University of Sheffield, and won the Ian Masser Prize for best master's dissertation.</p>
                 <a href="assets/Cantellow_MSc.pdf" target="_blank">Master's Dissertation</a>
             </div>
