--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 I have a PhD in Human Geography from the University of Bristol, an MSc in Applied Geographic Information Systems from the University of Sheffield and a BA in International Relations from the University of Lincoln.
             </p>
             <p>
-                In addition to producing geographic research, I am available to educate, consult, and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:t.cantellow@bristol.ac.uk">Get in touch.</a>
+                I am available to educate, consult, and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:t.cantellow@bristol.ac.uk">Get in touch.</a>
             </p>
         </section>
 
