--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,7 @@
                 <h2>Net Zero Resilience Index</h2>
                 <p>I developed an index to compare the vulnerability of UK places to green-led economic restructuring.</p>
                 <a href="https://www.bristol.ac.uk/policybristol/policy-briefings/net-zero-decarbonisation-economy/" target="_blank">Report</a> |
+                <a href="https://www.bristol.ac.uk/media-library/sites/policybristol/briefings/Devising%20a%20net%20zero%20resilience%20index,%20a%20note%20on%20methods.pdf" target="_blank">Methodological Note</a>
                 <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">Website</a>
             </div>
         </div>
