--- a/statistics.html
+++ b/statistics.html
@@ -74,6 +74,7 @@
                 <li><a href="https://spatial-microsim-book.robinlovelace.net/" target="_blank">Spatial Microsimulation</a> - Covers spatial data microsimulation techniques in R.</li>
                 <li><a href="https://www.esri.com/arcgis-blog/author/j_nelson/" target="_blank">Esri GIS Blog</a> - Articles on GIS and spatial analysis.</li>
                 <li><a href="https://www.flickr.com/groups/qgis/pool" target="_blank">QGIS User Group</a> - Flickr group for QGIS community projects and resources.</li>
+                <li><a href="https://www.helenmakesmaps.com/blog" target="_blank"> HelenMakesMaps</a> - Helen posts lots of free tutorials and is a great advocate for GIS.</li>
         </li>
         <li style="margin-bottom:0;">
             <p style="margin-bottom:5px;"><strong>Additional Resources:</strong></p>
