--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
             <div class="project-content">
                 <h2>PhD Thesis</h2>
                 <p>My thesis, <i>The ‘New Divides’ of Neoliberalism</i>, was submitted in September 2024 for my PhD in Human Geography at the University of Bristol.</p>
-                <p>(Due in 2025)</p>
+                <a https://research-information.bris.ac.uk/en/studentTheses/the-new-divides-of-neoliberalism" target="_blank">Thesis</a>
             </div>
         </div>
 
