--- a/projects.html
+++ b/projects.html
@@ -71,6 +71,17 @@
 
     <main>
         <div class="project">
+            <a href="https://doi.org/10.1002/geo2.70008" target="_blank">
+                <img src="assets/images/saltfringe.png" alt="The Salt Fringe">
+            </a>
+            <div class="project-content">
+                <h2>The Salt Fringe as an Energy Periphery</h2>
+                <p>Publsihed journal article in Geo: Geography and Environment that explores energy efficiency of homes in seaside towns.</p>
+                <a href="https://doi.org/10.1002/geo2.70008" target="_blank">Article</a> |
+            </div>
+        </div>
+
+        <div class="project">
             <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">
                 <img src="assets/images/netzeroindex.png" alt="Net Zero Resilience Index">
             </a>
