--- a/projects.html
+++ b/projects.html
@@ -75,8 +75,8 @@
                 <img src="assets/images/saltfringe.png" alt="The Salt Fringe">
             </a>
             <div class="project-content">
-                <h2>The Salt Fringe as an Energy Periphery</h2>
-                <p>Publsihed journal article in Geo: Geography and Environment that explores energy efficiency of homes in seaside towns.</p>
+                <h2>The Salt Fringe</h2>
+                <p>Published in <i>Geo: Geography and Environment</i>, this journal article explores the energy efficiency of homes in seaside towns.</p>
                 <a href="https://doi.org/10.1002/geo2.70008" target="_blank">Article</a> |
             </div>
         </div>
