--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
             <div class="project-content">
                 <h2>The Salt Fringe</h2>
                 <p>Published in <i>Geo: Geography and Environment</i>, this journal article explores the energy efficiency of homes in seaside towns.</p>
-                <a href="https://doi.org/10.1002/geo2.70008" target="_blank">Article</a> |
+                <a href="https://doi.org/10.1002/geo2.70008" target="_blank">Article</a>
             </div>
         </div>
 
