--- a/projects.html
+++ b/projects.html
@@ -99,8 +99,8 @@
                 <img src="assets/images/phd.png" alt="PhD Thesis">
             </a>
             <div class="project-content">
-                <h2>PhD Thesis</h2>
-                <p>My thesis, <i>The ‘New Divides’ of Neoliberalism</i>, was submitted in September 2024 for my PhD in Human Geography at the University of Bristol.</p>
+                <h2>Neoliberalism's 'New Divides'</h2>
+                <p>My PhD thesis explores contemporary inequality and politics in the UK, analysis cultural and economic cleavages.</p>
                 <a href="https://research-information.bris.ac.uk/en/studentTheses/the-new-divides-of-neoliberalism" target="_blank">Thesis</a>
             </div>
         </div>
