--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
             </a>
             <div class="project-content">
                 <h2>Neoliberalism's 'New Divides'</h2>
-                <p>My PhD thesis explores contemporary inequality and politics in the UK, analysis cultural and economic cleavages.</p>
+                <p>My PhD thesis explores contemporary inequality and politics in the UK, with a focus on cultural and economic cleavages.</p>
                 <a href="https://research-information.bris.ac.uk/en/studentTheses/the-new-divides-of-neoliberalism" target="_blank">Thesis</a>
             </div>
         </div>
