--- a/software.html
+++ b/software.html
@@ -42,16 +42,10 @@
         </li>
         <li style="margin-bottom:0;">
             <p style="margin-bottom:5px;"><strong>General Tools:</strong></p>
-                <li><a href="https://freefilesync.org/" target="_blank"><strong>FreeFileSync</strong></a> – Synchronises files and folders across devices. Awesome for keeping work synchronised across multiple filesystems: I used this to keep my PhD synchronised across my home PC, portable SSD, and onedrive-linked work laptop.</li>
                 <li><a href="https://www.amd.com/en/technologies/ramdisk" target="_blank"><strong>AMD RAMDisk</strong></a> – Allows system RAM to function as super-fast storage for temporary files. 4GB limit on free version.</li>
-                <li><a href="https://www.getpaint.net/" target="_blank"><strong>Paint.NET</strong></a> – For image manipulation.</li>
-                <li><a href="https://outlookgooglecalendarsync.com/" target="_blank"><strong>Outlook Google Calendar Sync</strong></a> – Syncs Google and Outlook calendars.</li>
-                <li><a href="https://www.unifiedremote.com/" target="_blank"><strong>Unified Remote</strong></a> – Turns a smartphone into a PC remote control.</li>
+                <li><a href="https://www.unifiedremote.com/" target="_blank"><strong>Unified Remote</strong></a> – Turns a smartphone into a PC remote control. Great for presentations.</li>
                 <li><a href="https://12ft.io/" target="_blank"><strong>12ft.io</strong></a> – Paywall bypasser.</li>
                 <li><a href="https://github.com/auctors/free-lunch" target="_blank"><strong>Free Lunch</strong></a> – Awesome list of free software.</li>
-                <li><a href="https://github.com/gorhill/uBlock" target="_blank"><strong>uBlock Origin</strong></a> – A powerful ad-blocker.</li>
-                <li><a href="https://sponsor.ajay.app/" target="_blank"><strong>SponsorBlock</strong></a> – A browser extension that skips sponsored segments in videos.</li>
-                <li><a href="https://swiftselectionsearch.com/" target="_blank"><strong>SwiftSelectionSearch</strong></a> – A browser extension allowing quick searches by highlighting text.</li>
                 <li><a href="https://cycle.travel/" target="_blank"><strong>Cycle.Travel</strong></a> – Bicycle route planner. Finds quiet roads.</li>
                 <li><a href="https://ninety180.com/" target="_blank"><strong>Ninety 180</strong></a> – Good visualisation tool for post-Brexit Brits. Calculate how many days you can remain in the EU.</li>
         </li>
