--- a/software.html
+++ b/software.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <title>Tom Cantellow</title>
-    <meta name="Software List" content="Recommended software">
+    <meta name="Recommended tools" content="Recommended tools">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="assets/styles.css"> <!-- Link to external stylesheet -->
     <script src="assets/script.js" defer></script> <!-- Link to external script -->
@@ -30,7 +30,7 @@
         window.onload = loadHeader;
     </script>
 <body>
-    <h1>Recommended Software</h1>
+    <h1>Recommended Tools</h1>
     <ul style="list-style-type:none; padding:0;">
         <li style="margin-bottom:0;">
             <p style="margin-bottom:5px;"><strong>Research, Mapping, and Analysis:</strong></p>
@@ -41,7 +41,7 @@
                 <li><a href="https://mycolor.space/" target="_blank"><strong>ColorSpace</strong></a> – An online tool for creating colour palettes.</li>
         </li>
         <li style="margin-bottom:0;">
-            <p style="margin-bottom:5px;"><strong>General Tools:</strong></p>
+            <p style="margin-bottom:5px;"><strong>General:</strong></p>
                 <li><a href="https://www.amd.com/en/technologies/ramdisk" target="_blank"><strong>AMD RAMDisk</strong></a> – Allows system RAM to function as super-fast storage for temporary files. 4GB limit on free version.</li>
                 <li><a href="https://www.unifiedremote.com/" target="_blank"><strong>Unified Remote</strong></a> – Turns a smartphone into a PC remote control. Great for presentations.</li>
                 <li><a href="https://12ft.io/" target="_blank"><strong>12ft.io</strong></a> – Paywall bypasser.</li>
