--- a/assets/header.html
+++ b/assets/header.html
@@ -8,7 +8,7 @@
                     <a href="#" class="dropbtn">Resources</a>
                     <div class="dropdown-content">
                         <a href="statistics.html">Learn Data Science</a>
-                        <a href="software.html">Recommended Software</a>
+                        <a href="software.html">Recommended Tools</a>
                     </div>
                 </div>
                 <a href="assets/CV.pdf">CV</a>
