--- a/software.html
+++ b/software.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <title>Tom Cantellow</title>
-    <meta name="Recommended tools" content="Recommended tools">
+    <meta name="Recommended Tools" content="Recommended Tools">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="assets/styles.css"> <!-- Link to external stylesheet -->
     <script src="assets/script.js" defer></script> <!-- Link to external script -->
