--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <!-- Introduction Section -->
         <section class="intro">
             <p>
-                I am a researcher interested in the economy, society, and politics of Britain. I use quantitative methodologies to analyse inequality, housing, energy efficiency, voting, personal finance, and local economies.
+                I am a researcher interested in the economy, society, and politics of Britain. I use data science and quantitative methodologies to analyse inequality, housing, energy efficiency, voting, personal finance, and local economies.
             </p>
             <p>
                 I have a PhD in Human Geography from the University of Bristol, an MSc in Applied Geographic Information Systems from the University of Sheffield and a BA in International Relations from the University of Lincoln.
             </p>
             <p>
-                I am available to educate, consult, and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:t.cantellow@bristol.ac.uk">Get in touch.</a>
+                I am available to educate, consult, and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:tcantellow@gmail.comk">Get in touch.</a>
             </p>
         </section>
 
